fixed layout issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,25 +7,28 @@
 
 * {
     margin: 0;
-    padding: 0;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: var(--firey);
     background-color: var(--light);
+    margin: 0;
 }
 
+/* header styling */
 h1 {
     font-size: 40px;
-    padding-left: 2%;
 }
 
-h2 {
-    font-size: 35px;
+.banner {
+    height: 200px;
+    border-bottom: solid;
+    border-width: 36px;
+    background-image: url(aurora-1197753_1280.jpg);
 }
 
-/* nav bar styling */
+/* both nav bar styling */
 ul {
     display: flex;
     justify-content: flex-end;
@@ -50,47 +53,30 @@ li a:hover {
     color: var(--light);
 }
 
-/* banner image */
-.banner {
-    height: 200px;
-    width: 100%;
-    margin-bottom: 5%;
-    border-bottom: solid;
-    border-width: 36px;
-    background-image: url(aurora-1197753_1280.jpg);
+/* section layout */
+h2 {
+    font-size: 35px;
 }
 
-/* About Me section styling */
 .about {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 5%;
-    padding-left: 2%;
-    padding-right: 2%;
 }
 
-.about p {
-    width: 650px;
-}
-
-/* Work section styling */
 .work {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 2%;
-    padding-left: 2%;
-    padding-right: 2%;
 }
 
-.main-card {
+.resume {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
+/* work card stylings */
 .main-card img {
     height: 400px;
     width: 650px;
@@ -104,22 +90,16 @@ li a:hover {
     border-width: 5px;   
 }
 
-/* 2 x 2 card square */
-.cards {
+.grid {
     display: grid;
-    justify-content: end;
     grid-template-columns: 315px 315px;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
-    margin-bottom: 5%;
-    padding-right: 2%;
 }
 
 .card {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 .card img {
@@ -135,26 +115,9 @@ li a:hover {
     border-width: 5px;   
 }
 
-/* Resume section styling */
-.resume {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 5%;
-    padding-left: 2%;
-    padding-right: 2%;
-}
-
-.resume p {
-    font-size: 20px;
-}
-
-
-
 /* Footer styling */
 footer {
     height: 4%;
-    width: 100%;
 }
 
 h4 {
@@ -184,6 +147,10 @@ h4 {
     h1 {
       color: var(--light);
     }
+    h2 {
+        font-size: 24px;
+    }
+ 
   }
 
 
